* 2012-06-11 - jan.bauerdick@open-xchange.com

 - Refactored to run in groupware VM
 - Register RMI as OSGi-service

* 2012-06-06 - marcus.klein@open-xchange.com

 - Fix for bug 22263: RequireBundle is still necessary for com.openexchange.admin & com.openexchange.admin.plugin.hosting bundles.

* 2012-05-23 - marcus.klein@open-xchange.com

 - Fix for bug 22163: Using cache write through for context to database assignment to prevent missing information while reading from slave.

* 2012-05-04 - marcus.klein@open-xchange.com

 - Fix for bug 21826: Logging every create, change and delete operation of contexts, users, groups and resources.

* 2012-04-12 - marcus.klein@open-xchange.com

 - Fix for bug 21788: Removed sort from SQL query to reduce response time. Sorting now in code.

* 2012-03-12 - marcus.klein@open-xchange.com

 - Fix for bug 21707: oxinstaller works now with completely new path for configuration files.

* 2012-03-08 - marcus.klein@open-xchange.com

 - Fix for bug 21708: Properly replacing configuration directory in initconfigdb script.

* 2012-03-08 - choeger@open-xchange.com

 - Fix for bug 21438: [L3] listdatabase does not show the hostname anymore

* 2012-02-28 - choeger@open-xchange.com

 - SCR968: Define destination database/filestore on context creation

* 2012-02-07 - marcus.klein@open-xchange.com

 - Fix for bug 21167: Creating sorted list of databases (new algorithm) and check each database for availability before creating a context.

* 2012-02-06 - choeger@open-xchange.com

 - Fix for bug 21459: enhance rmi/soap documentation: list and searchpattern
 - Fix for bug 14517: RMI javadoc broken

* 2012-01-24 - thorben.betten@open-xchange.com

 - Fix for bug 21331: Using proper SQL query to make use of index

* 2011-12-14 - choeger@open-xchange.com

 - Fix for bug 20731: Unregistering a slave database host does not remove the master anymore.

* 2011-12-07 - marcus.klein@open-xchange.com
