@@ -1,3 +1,7 @@
+* 2012-08-14 - marcus.klein@open-xchange.com
+
+ - Fix for bug 22580: Do not get into a NullPointerException if starting of the administration hosting plugin fails.
+
 * 2012-06-11 - jan.bauerdick@open-xchange.com
 
  - Refactored to run in groupware VM
